# basket-tracking

./: LICENSE  README.md  main.py  notebook.ipynb  pyproject.toml
basket_tracking/data/services/: finder_service.py
basket_tracking/domain/entities/: ball.py  entity.py  frame.py  player.py  scene.py
basket_tracking/domain/services/: finder_service.py  video_service.py
basket_tracking/domain/usecases/: get_frames_from_video.py
core/: __init__.py
core/data/: __init__.py
core/data/services/: __init__.py  default_finder_service.py  default_homography_service.py  default_image_service.py  default_video_service.py  finder_service.py  image_service.py  video_service.py
core/domain/entities/: __init__.py  ball.py  court.py  entity.py  player.py  scene.py
core/domain/services/: __init__.py  finder_service.py  homography_service.py  image_service.py  video_service.py
core/domain/usecases/: __init__.py  apply_mask_from_corners.py  get_frames_from_video.py  get_scenes_from_video.py
core/domain/usecases/images/: draw_circle_in_frame.py  draw_rectangle_in_frame.py
core/domain/usecases/videos/: get_scenes_from_video.py
core/infra/context/: video_writer_context.py
core/infra/scene_objects/: __init__.py  body.py  corners.py  offset.py
tests/: test_basket_tracking.py
