[tool.poetry]
name = "basket-tracking"
version = "0.1.0"
description = ""
authors = ["Yann <iamyanndias@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.4"
Pillow = "^9.1.1"
opencv-python = "^4.6.0"
imutils = "^0.5.4"
torch = "^1.11.0"
torchvision = "^0.12.0"
PyYAML = "5.1"
Shapely = "^1.8.2"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
